# TaskMind-AI

ai_job_hunter/: README.md  pyproject.toml
ai_job_hunter/src/ai_job_hunter/: crew.py  main.py
ai_job_hunter/src/ai_job_hunter/config/: agents.yaml  tasks.yaml
ai_job_hunter/src/ai_job_hunter/jobs/: AI&ML.md  AILLM_job_listings.md
ai_latest_development/: README.md  pyproject.toml  report.md
ai_latest_development/src/ai_latest_development/: crew.py  main.py  report.md
