[project]
name = "ai_job_hunter"
version = "0.1.0"
description = "ai-job-hunter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
ai_job_hunter = "ai_job_hunter.main:run"
run_crew = "ai_job_hunter.main:run"
train = "ai_job_hunter.main:train"
replay = "ai_job_hunter.main:replay"
test = "ai_job_hunter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
